--- a/templates/layout01.html
+++ b/templates/layout01.html
@@ -14,40 +14,22 @@
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-        <div class="bg-dark">
-            <nav class="navbar navbar-expand-lg bg-body-teritory ms-2">
-                <a class="navbar-brand text-light" href="/">Project</a>
-                <button class="navbar-toggler" aria-controls="navbar" aria-expanded="false"
-                    aria-label="Toggle Navigation" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button> 
-                <div class="collapse navbar-collapse" id="navbar">
+        <nav>
+            <div class="page-container">
+                <div class="page-items">
                     {% if session["user_id"] %}
-                    <ul class="navbar nav d-flex mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/dashboard">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/myposts">My Posts</a></li>
-                    </ul>
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ session['username'] }}</a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/profile">Profile</a>
-                                <a class="dropdown-item" href="/logout">Log Out</a>
-                            </div>
-                        </li>
-                    </ul>
+                    <a class="nav-item" href="/">Home</a>
+                    <a class="nav-item" href="/myprofile">My Profile</a>
+                    <a class="nav-item" href="/logout">Logout</a>
                     {% else %}
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link text-light" href="/register">Register</a></li>
-                        <li class="nav-item"><a class="nav-link text-light" href="/login">Login</a></li>
-                    </ul>
+                    <a class="nav-item" href="/register">Register</a>
+                    <a class="nav-item" href="/login">Login</a>
                     {% endif %}
                 </div>
-            </nav>
-        </div>
-        <main class="container py-5 text-center">
-            {% block main %}{% endblock %}  
+            </div>
+        </nav>
+        <main class="main-body">
+            {% block main %}{% endblock %}
         </main>
     </body>
 </html>
