--- a/static/styles.css
+++ b/static/styles.css
@@ -45,20 +45,24 @@
     flex-direction: row;
     justify-content: center;
     gap: 35px;
-    width: 500px;
+    width: 600px;
     height: 50px;
     border-width: 2px;
     border-color: white;
     border-style: solid;
     border-radius: 20px;
-    padding: 9px
 }
 
 .item-1{
     width: 55px;
+    padding-top: 9px;
+}
+.item-2 {
+    padding-top: 3px;
 }
 .item-3{
     width: 55px;
+    padding: 9px;
 }
 
 .sort-by-btn {
@@ -66,12 +70,6 @@
     padding: 0;
     border: none;
     color: white;
-}
-
-.sort-by-btn:hover {
-    background-color: rgb(104, 184, 106);
-    border-radius: 15px;
-    width: 50.15px;
 }
 
 .sort-by-items {
@@ -102,7 +100,7 @@
 .item-1:hover .sort-by-btn { 
     background-color: rgb(104, 184, 106);
     border-radius: 15px;
-    width: 70px;
+    width: 50.15px;
 }
 
 .item-3:hover .sort-by-items {
@@ -112,12 +110,75 @@
 .item-3:hover .sort-by-btn { 
     background-color: rgb(104, 184, 106);
     border-radius: 15px;
-    width: 70px;
+    width: 50.15px;
 }
 
 .search-bar {
     background-color: rgb(26, 28, 27);
     color: white;
-    width: 280px;
+    width: 380px;
+    height: 40px;
     border-radius: 15px;
+    padding-left: 14px;
+}
+
+.main-middle {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+.main-middle-container {
+    padding: 20px;
+}
+.main-middle-items {
+    width: 600px;
+    height: 600px;
+    border-color: aliceblue; 
+    border-width: 2px;
+    border-style: solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5px;
+    row-gap: 7px;
+}
+
+.main-middle-box-1 {
+    width: 585px;
+    height: 55px;
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+}
+
+.main-middle-box-2 {
+    width: 585px;
+    height: 475px;
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+}
+
+.main-middle-box-3 {
+    width: 585px;
+    height: 45px;
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+}
+
+.username {
+    color: aquamarine;
+}
+
+.Name {
+    color: aquamarine;
+}
+
+.box-1-item-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-left: 5px
 }
