--- a/templates/dashboard01.html
+++ b/templates/dashboard01.html
@@ -45,10 +45,11 @@
                     </div>
                 </div>
                 <div class="main-middle-box-2">
-
                 </div>
                 <div class="main-middle-box-3">
+                    <div class="box-3-item-1">
 
+                    </div>
                 </div>
             </div>
         </div>
