--- a/static/styles.css
+++ b/static/styles.css
@@ -191,10 +191,11 @@
 .box-3-item-1 {
     width: 75px;
     height: 40px;
-    padding: 2px;
     display: flex;
-    justify-content: right;
+    justify-content: left;
     border-style: solid;
     border-color: aliceblue;
     border-width: 2px;
+    padding-left: 2px;
+    padding-top: 2px;
 }
