--- a/templates/layout01.html
+++ b/templates/layout01.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         <link href = "/static/styles.css" rel="stylesheet">
-
+        <script src="/static/script.js"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
