--- a/static/styles.css
+++ b/static/styles.css
@@ -123,7 +123,7 @@
 
 .main-middle {
     width: 100%;
-    height: 684px;
+    height: 650px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -199,4 +199,41 @@
     border-width: 2px;
     padding-left: 2px;
     padding-top: 2px;
+}
+
+.foot {
+    background-color:rgb(37, 35, 35);
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+.foot-container {
+    width: auto;
+    max-width: 100%;
+    min-width: 600px;
+    height: 46px;
+    border-radius: 24px;
+    border-style: solid;
+    border-color:#f1f1f1;
+    border-width: 1px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+}
+.post-btn {
+    margin-right: 10px;
+    margin-left: 5px;
+    background: none;
+    border: none;
+    color: black;
+}
+
+.message-box {
+    display: flex;
+    flex: 1;
+    margin-left: 10px;
+    border: none;
+    outline: none;
+    height: 34px;
 }
