--- a/templates/layout01.html
+++ b/templates/layout01.html
@@ -3,7 +3,7 @@
 <html lang = 'en'>
     <head>
         <meta charset="utf-8">
-        <meta name = "viewport" content="initial-scale=1", width="device-width">
+        <meta name = "viewport" content="initial-scale=1" width="device-width">
 
         <!-- https://getbootstrap.com/docs/5.3 --> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -32,4 +32,7 @@
             {% block main %}{% endblock %}
         </main>
     </body>
+    <footer>
+        {% block foot %}{% endblock %}
+    </footer>
 </html>
