--- a/static/styles.css
+++ b/static/styles.css
@@ -30,45 +30,59 @@
 
 .main-top{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     width: 100%;
     height: 60px;
     background-color:rgba(69, 225, 69, 0.611);
-    padding-top: 10px;
+    padding: 5px;
 }
 
-.main-top-items {
+.main-top-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 35px;
-    width: 600px;
-    height: 50px;
-    border-width: 2px;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    max-width: 100%;
+    min-width: 600px;
+    border-width: 1px;
     border-color: white;
     border-style: solid;
-    border-radius: 20px;
+    border-radius: 24px;
+    background-color: white;
 }
 
-.item-1{
+.top-item-1{
     width: 55px;
-    padding-top: 9px;
+    margin-left: 10px;;
 }
-.item-2 {
-    padding-top: 3px;
+.top-item-2 {
+    display: flex;
+    flex: 1;
+    border: none;
+    outline: none;
+    height: 34px;
 }
-.item-3{
+.top-item-3{
     width: 55px;
-    padding-top: 9px;
+    margin-right: 10px;
 }
 
 .sort-by-btn {
     background: none;
     padding: 0;
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     width: 50.15px;
+}
+
+.search-bar {
+    display: flex;
+    flex: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: none;
+    outline: none;
+    height: 34px;
 }
 
 .sort-by-items {
@@ -92,33 +106,24 @@
     border-radius: 5px;
 }
 
-.item-1:hover .sort-by-items {
+.top-item-1:hover .sort-by-items {
     display: block;
 }
 
-.item-1:hover .sort-by-btn { 
+.top-item-1:hover .sort-by-btn { 
     background-color: rgb(104, 184, 106);
     border-radius: 15px;
     width: 50.15px;
 }
 
-.item-3:hover .sort-by-items {
+.top-item-3:hover .sort-by-items {
     display: block;
 }
 
-.item-3:hover .sort-by-btn { 
+.top-item-3:hover .sort-by-btn { 
     background-color: rgb(104, 184, 106);
     border-radius: 15px;
     width: 50.15px;
-}
-
-.search-bar {
-    background-color: rgb(26, 28, 27);
-    color: white;
-    width: 380px;
-    height: 40px;
-    border-radius: 15px;
-    padding-left: 14px;
 }
 
 .main-middle {
