--- a/templates/dashboard01.html
+++ b/templates/dashboard01.html
@@ -7,29 +7,26 @@
 {% block main %}
     <div class="main-top">
         <div class="main-top-container">
-            <div class="main-top-items">
-                <div class="item-1">
-                    <button class="sort-by-btn">Sort By</button>
-                    <div class="sort-by-items">
-                        <form action="/view" method="post">
-                            <a href="/liked">Liked</a>
-                            <a href="/disliked">Disliked</a>
-                        </form>
-                    </div>
-                </div>
-                <div class="item-2">
-                    <form action="/search" method="post">
-                        <input class="search-bar" type="text" placeholder="Search..." name="search">
+            <div class="top-item-1">
+                <button class="sort-by-btn">Sort By</button>
+                <div class="sort-by-items">
+                    <form action="/view" method="post">
+                        <a href="/liked">Liked</a>
+                        <a href="/disliked">Disliked</a>
                     </form>
                 </div>
-                <div class="item-3">
-                    <button class="sort-by-btn">Layout</button>
-                    <div class="sort-by-items">
-                        <form action="/view" method="post">
-                            <a type="submit" name="column">Column</a>
-                            <a type="submit" name="grid">Grid</a>
-                        </form>
-                    </div>
+            </div>
+            
+                <div class="top-item-2">
+                    <input class="search-bar" type="text" placeholder="Search..." name="search">
+                </div>
+            <div class="top-item-3">
+                <button class="sort-by-btn">Layout</button>
+                <div class="sort-by-items">
+                    <form action="/view" method="post">
+                        <a type="submit" name="column">Column</a>
+                        <a type="submit" name="grid">Grid</a>
+                    </form>
                 </div>
             </div>
         </div>
