--- a/static/styles.css
+++ b/static/styles.css
@@ -136,48 +136,46 @@
     scroll-snap-type: y-mandatory;
 }
 .main-middle-container {
-    padding: 2px;
+    padding: 5px;
     margin-top: 20px;
     margin-bottom: 10px;
     display: flex;
-    justify-content: center;
-    width: 570px;
-    height: 375px;
-    border-color:aliceblue;
-    border-width:2px;
-    border-style: solid;
-}
-.main-middle-items {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5px;
-    row-gap: 10px;
+    justify-content: space-between;
+    width: auto;
+    max-width: 100%;
+    min-width: 570px;
+    height: 375px;
+    border-color:aliceblue;
+    border-width:1px;
+    border-radius: 24px;
+    border-style: solid;
+    gap: 1px;
+    background-color: rgb(255, 255, 255);
 }
 
 .main-middle-box-1 {
     width: 555px;
     height: 55px;
-    border-style: solid;
-    border-color: white;
-    border-width: 2px;
+    border-bottom-style: solid;
+    border-bottom-color: #c2bfbf;
+    border-bottom-width: 1px;
 }
 
 .main-middle-box-2 {
     width: 555px;
     height: 425px;
-    border-style: solid;
-    border-color: white;
-    border-width: 2px;
 }
 
 .main-middle-box-3 {
     width: 555px;
     height: 90px;
-    border-style: solid;
-    border-color: white;
-    border-width: 2px;
+    border-top-style: solid;
+    border-top-color: #c2bfbf;
+    border-top-width: 2px;
     padding: 2px;
+
 }
 
 .username {
@@ -192,16 +190,14 @@
     display: flex;
     flex-direction: column;
     align-items:flex-start;
-    padding-left: 5px
+    padding-left: 5px;
+    color: black;
 }
 .box-3-item-1 {
     width: 75px;
     height: 40px;
     display: flex;
     justify-content: left;
-    border-style: solid;
-    border-color: aliceblue;
-    border-width: 2px;
     padding-left: 2px;
     padding-top: 2px;
 }
