--- a/templates/dashboard01.html
+++ b/templates/dashboard01.html
@@ -57,6 +57,9 @@
                             12-15.808 0-6.792-8.875-8.306-12-2.944z"/>
                     </svg>
                 </div>
+                <div class="box-3-item-2">
+                    <p id="count{{ i["post_id"]}}"></p>
+                </div>
             </div>
         </div>
         {% endfor %}
