implemented sort feature

--- a/templates/dashboard01.html
+++ b/templates/dashboard01.html
@@ -10,10 +10,8 @@
             <div class="top-item-1">
                 <button class="sort-by-btn">Sort By</button>
                 <div class="sort-by-items">
-                    <form action="/view" method="post">
-                        <a href="/liked">Liked</a>
-                        <a href="/disliked">Disliked</a>
-                    </form>
+                    <a href="/sort?sort_by=liked" name="sort_by" >Liked</a>
+                    <a href="/sort?sort_by=disliked" name="sort_by">Disliked</a>
                 </div>
             </div>
                 <div class="top-item-2">
