--- a/templates/layout01.html
+++ b/templates/layout01.html
@@ -28,8 +28,10 @@
                 </div>
             </div>
         </nav>
-        <main class="main-body">
-            {% block main %}{% endblock %}
+        <main>
+            <div class="main-body">
+                {% block main %}{% endblock %}
+            </div>
         </main>
     </body>
 </html>
