feature updated: comment under post

--- a/templates/dashboard01.html
+++ b/templates/dashboard01.html
@@ -39,7 +39,7 @@
                         <p class="username" style="color: rgb(255, 0, 0);">{{ "@" ~ i["username"] }}</p>
                     </div>
                 </div>
-                <a href="/comments?post_id={{ i["post_id"] }}" style="color: black; text-decoration: none;">
+                <a href="/viewposts?post_id={{ i["post_id"] }}" style="color: black; text-decoration: none;">
                     <div class="post-box-2" id="{{ i["post_id"] }}">
                         <p>{{ i["post"] }}</p>
                     </div>
