--- a/static/styles2.css
+++ b/static/styles2.css
@@ -88,6 +88,8 @@
     max-height: 75%;
     background-color: white;
     border-radius: 30px;
+    padding: 5px;
+    overflow-y: scroll;
 }
 /* comments */
 
@@ -129,3 +131,31 @@
 }
 
 /* commenter */
+
+/*replies*/
+.comment {
+    background-color: white;
+    width: 100%;
+    height: max-content;
+    margin-bottom: 10px;
+    border-bottom: 1px solid black;
+}
+
+.comment-box-1 {
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid rgb(170, 166, 166);
+    padding: 5px;
+}
+
+.comment-box-1-item-1 {
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    gap: 10px;
+}
+.comment-box-2 {
+    width: 100%;
+    height: max-content;
+}
+/*replies*/
