--- a/static/styles.css
+++ b/static/styles.css
@@ -256,3 +256,50 @@ a {
     text-decoration: none;
 }
 /*myprofile*/
+
+
+.container-2 {
+    height: 100vh;
+    width: 50%;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.comment-container {
+    width: 500px;
+    max-width: 75%;
+    height: 100%; 
+    overflow-y: scroll;
+    padding: 10px;
+}
+
+
+.comment {
+    background-color: white;
+    width: 100%;
+    height: max-content;
+    margin-bottom: 10px;
+    border-bottom: 1px solid black;
+    border-radius: 20px;
+}
+
+.comment-box-1 {
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid rgb(170, 166, 166);
+    padding: 5px;
+}
+
+.comment-box-1-item-1 {
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    gap: 10px;
+}
+.comment-box-2 {
+    width: 100%;
+    height: max-content;
+}
