--- a/templates/post.html
+++ b/templates/post.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class="comment-box-2">
                             <div class="comment-box-2-item-2">
-                                <p class="reply" style="color: black">{{ j["comment"] }}</p>
+                                <p class="reply" style="color: black; padding-left: 2px;">{{ j["comment"] }}</p>
                             </div>
                         </div>
                     </div>
