--- a/static/styles.css
+++ b/static/styles.css
@@ -170,8 +170,11 @@ html body {
 .post-box-1 {
     width: 100%;
     height: 30px;
-    padding: 3px;
+    padding: 5px;
     border-bottom: 1px solid;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .post-box-2 {
     width: 100%;
@@ -291,6 +294,9 @@ a {
     height: 30px;
     border-bottom: 1px solid rgb(170, 166, 166);
     padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .comment-box-1-item-1 {
