--- a/templates/myprofile.html
+++ b/templates/myprofile.html
@@ -29,6 +29,20 @@
                         <p class="Name" style="color: rgb(0, 0, 0);">{{ i["name"] }}</p>
                         <p class="username" style="color: rgb(255, 0, 0);">{{ "@" ~ i["username"] }}</p>
                     </div>
+                    <div class="box-2-item-2" id="post{{ i["post_id"] }}" onclick='del(this.id)' style>
+                        <svg id="post{{ i["post_id"] }}" style="display: block; width: 20px; height: 20px;" xlmns="http://www.w3.org/2000/svg" viewBox="0 0 408.483 408.483">
+                            <g>
+                                <path d="M87.748,388.784c0.461,11.01,9.521,19.699,20.539,19.699h191.911c11.018,0,20.078-8.689,20.539-19.699l13.705-289.316
+                                    H74.043L87.748,388.784z M247.655,171.329c0-4.61,3.738-8.349,8.35-8.349h13.355c4.609,0,8.35,3.738,8.35,8.349v165.293
+                                    c0,4.611-3.738,8.349-8.35,8.349h-13.355c-4.61,0-8.35-3.736-8.35-8.349V171.329z M189.216,171.329
+                                    c0-4.61,3.738-8.349,8.349-8.349h13.355c4.609,0,8.349,3.738,8.349,8.349v165.293c0,4.611-3.737,8.349-8.349,8.349h-13.355
+                                    c-4.61,0-8.349-3.736-8.349-8.349V171.329L189.216,171.329z M130.775,171.329c0-4.61,3.738-8.349,8.349-8.349h13.356
+                                    c4.61,0,8.349,3.738,8.349,8.349v165.293c0,4.611-3.738,8.349-8.349,8.349h-13.356c-4.61,0-8.349-3.736-8.349-8.349V171.329z"/>
+                                <path d="M343.567,21.043h-88.535V4.305c0-2.377-1.927-4.305-4.305-4.305h-92.971c-2.377,0-4.304,1.928-4.304,4.305v16.737H64.916
+                                    c-7.125,0-12.9,5.776-12.9,12.901V74.47h304.451V33.944C356.467,26.819,350.692,21.043,343.567,21.043z"/>
+                            </g>
+                        </svg>
+                    </div>
                 </div>
                 <a href="/viewposts?post_id={{ i["post_id"] }}" style="color: black; text-decoration: none;">
                     <div class="post-box-2" id="{{ i["post_id"] }}">
@@ -76,14 +90,30 @@
             <div class="comment">
                 <div class="comment-box-1">
                     <div class="comment-box-1-item-1">
-                        <p class="Name" style="color: black;">{{ j["name"] }}</p>
-                        <p class="username" style="color: black;">{{ "@" ~ j["username"] }}</p>
+                        <p class="Name" style="color: black;">{{ name }}</p>
+                        <p class="username" style="color: black;">{{ "@" ~ username }}</p>
+                    </div>
+                    <div class="box-2-item-2" id="cmt{{ j["comment_id"] }}" onclick='del(this.id)'>
+                        <svg id="post{{ j["comment_id"] }}" style="display: block; width: 20px; height: 20px;" xlmns="http://www.w3.org/2000/svg" viewBox="0 0 408.483 408.483">
+                            <g>
+                                <path d="M87.748,388.784c0.461,11.01,9.521,19.699,20.539,19.699h191.911c11.018,0,20.078-8.689,20.539-19.699l13.705-289.316
+                                    H74.043L87.748,388.784z M247.655,171.329c0-4.61,3.738-8.349,8.35-8.349h13.355c4.609,0,8.35,3.738,8.35,8.349v165.293
+                                    c0,4.611-3.738,8.349-8.35,8.349h-13.355c-4.61,0-8.35-3.736-8.35-8.349V171.329z M189.216,171.329
+                                    c0-4.61,3.738-8.349,8.349-8.349h13.355c4.609,0,8.349,3.738,8.349,8.349v165.293c0,4.611-3.737,8.349-8.349,8.349h-13.355
+                                    c-4.61,0-8.349-3.736-8.349-8.349V171.329L189.216,171.329z M130.775,171.329c0-4.61,3.738-8.349,8.349-8.349h13.356
+                                    c4.61,0,8.349,3.738,8.349,8.349v165.293c0,4.611-3.738,8.349-8.349,8.349h-13.356c-4.61,0-8.349-3.736-8.349-8.349V171.329z"/>
+                                <path d="M343.567,21.043h-88.535V4.305c0-2.377-1.927-4.305-4.305-4.305h-92.971c-2.377,0-4.304,1.928-4.304,4.305v16.737H64.916
+                                    c-7.125,0-12.9,5.776-12.9,12.901V74.47h304.451V33.944C356.467,26.819,350.692,21.043,343.567,21.043z"/>
+                            </g>
+                        </svg>
                     </div>
                 </div>
                 <div class="comment-box-2">
-                    <div class="comment-box-2-item-2">
-                        <p class="reply" style="color: black">{{ j["comment"] }}</p>
-                    </div>
+                    <a href="/viewposts?post_id={{ j["post_id"] }}" style="color: black; text-decoration: none;">
+                        <div class="comment-box-2-item-2">
+                            <p class="reply" style="color: black; padding-left: 2px;">{{ j["comment"] }}</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             {% endfor %}
